--- a/src/main/webapp/css/empList.css
+++ b/src/main/webapp/css/empList.css
@@ -3,13 +3,15 @@
 
 
 .tbl_type, .tbl_type th, .tbl_type td {
-	border: 0
+	border: 0;
+
 }
 
 .tbl_type {
 	width: 90%;
 	margin: 0 auto;
 	max-width:800px;
+	border-top: 2px solid green;
 	border-bottom: 2px solid #dcdcdc;
 	font-family: '돋움', dotum;
 	font-size: 12px;
@@ -27,6 +29,7 @@
 }
 
 .tbl_type thead {
+	
 	background-color: #f5f7f9;
 	font-weight: bold
 }
@@ -53,12 +56,7 @@
 	font-weight: bold
 }
 
-a{
-	text-decoration: none;
-	color: black;
-}
-
 h2{
 	text-align: center;
-	margin-bottom: 150px;
+	text-decoration: underline;
 }
